<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Snow\'s Shopping List</string>
    <string name="lists">Lists</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="transfer_receive">Transfer / Receive</string>
    <string name="item_not_found">Item not found.</string>
    <string name="retry">Retry</string>
    <string name="scanned_item">Orange Juice</string>
    <string name="buy_online">Buy online</string>
    <string name="transfer">Transfer</string>
    <string name="receive">Receive</string>
    <string name="waiting">Waiting...</string>
    <string name="cancel">Cancel</string>
    <string name="add_an_item">Add an item</string>
    <string name="add_list">Add List</string>
    <string name="add_item_hint">Add item</string>
    <string name="add_list_hint">Add List</string>
    <string name="new_list_title">Unnamed List</string>
    <string name="new_item_button">Add Item</string>
    <string name="new_list_button">Add List</string>
    <string name="left_arrow"><![CDATA[<]]></string>
    <string name="right_arrow"><![CDATA[>]]></string>
    <string name="delete_ze_list">Delete ze lizt?</string>
    <string name="delete">Delete</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="look_up_recipe">Look Up Recipe</string>
    <string name="chicken_soup">Chicken soup</string>
    <string name="add_to_list">Add to List</string>
</resources>
