<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:id="@+id/item_image">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scanned_item"
            android:id="@+id/scanned_item" android:layout_gravity="center"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView" android:layout_gravity="center" android:src="@drawable/orange_juice"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_list"
            android:layout_margin="10dip"
            android:id="@+id/add_to_list_button" android:layout_gravity="center"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_online"
            android:layout_margin="10dip"
            android:id="@+id/buy_online_button" android:layout_gravity="center"/>
</LinearLayout>