<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <TextView
            android:layout_margin="10dip"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/look_up_recipe"/>
    <EditText
            android:layout_margin="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/chicken_soup"
            android:id="@+id/recipe_name_edit_text"
            android:imeOptions="actionDone"/>
    <ListView
            android:id="@+id/ingredients_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"/>

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <Button
                android:layout_margin="10dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_to_list"
                android:layout_weight="1"
                android:id="@+id/add_ingredients_button"
                android:visibility="invisible"
                android:clickable="false"/>
    </LinearLayout>
</LinearLayout>